<resources>
    <string name="app_name">Farmacia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saludo">Bienvenido!</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="tienda">Articulos</string>
    <string name="acetaminohpen">Acetaminohpen</string>
    <string name="tiendaT">Tienda</string>
    <string name="tienda2">Tienda</string>
    <string name="id">id</string>
    <string name="producto">Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="buscar">Buscar</string>
    <string name="comprar">Comprar</string>
    <string name="registro">Registro</string>
    <string name="registro2">Registro</string>
    <string name="idProducto">ID</string>
    <string name="productoProducto">Producto</string>
    <string name="precio">Precio</string>
    <string name="_1">1</string>
    <string name="simvastatina">Simvastatina</string>
    <string name="_5">$5</string>
    <string name="_2">2</string>
    <string name="aspirina">Aspirina</string>
    <string name="_Precio2">$1</string>
    <string name="_4">4</string>
    <string name="omeprazol">Omeprazol</string>
    <string name="_0_50">$0.50</string>
    <string name="_Precio4">4</string>
    <string name="lexotiroxina_s_dica">Lexotiroxina sódica</string>
    <string name="_10">$10</string>
    <string name="_5p">5</string>
    <string name="ramipril">Ramipril</string>
    <string name="_1p">$1</string>
    <string name="_6">6</string>
    <string name="amlodipina">Amlodipina</string>
    <string name="_0_25">$0.25</string>
    <string name="_7">7</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="_0_15">$0.15</string>
    <string name="_8">8</string>
    <string name="atorvastatina">Atorvastatina</string>
    <string name="_1_15">$1.15</string>
    <string name="_9">9</string>
    <string name="salbutamol">Salbutamol</string>
    <string name="_3_15">$3.15</string>
    <string name="_10p">10</string>
    <string name="lansoprazol">Lansoprazol</string>
    <string name="_5_15">$5.15</string>
</resources>