<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tienda"
    android:background="@color/Bprimary">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="39dp"
        android:text="@string/tienda2"
        android:textAlignment="center"
        android:textColor="@color/titulos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="108dp">

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/botones"
            android:text="Registro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.862" />

        <Button
            android:id="@+id/btnProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/botones"
            android:text="@string/producto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnRegistro"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.862" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:backgroundTint="@color/botones"
            android:text="@string/buscar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.644"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnComprar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/botones"
            android:text="@string/comprar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.644"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txtCantidad"
            android:layout_width="170dp"
            android:layout_height="52dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:hint="@string/cantidad"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtProducto"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="157dp"
            android:layout_height="52dp"
            android:text="Precio"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.845"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26" />

        <EditText
            android:id="@+id/txtId"
            android:layout_width="165dp"
            android:layout_height="48dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtCantidad"
            app:layout_constraintTop_toBottomOf="@+id/tvPrecio" />

        <TextView
            android:id="@+id/txtProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/producto"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/producto"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.257"
            tools:ignore="NotSibling,TextViewEdits" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>