<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lista"
    android:background="@color/Bprimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/botones"
            android:text="@string/comprar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnRegistro"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/botones"
            android:text="@string/producto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/botones"
            android:text="Ver registro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.694" />

        <TextView
            android:id="@+id/txtRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="380dp"
            android:layout_height="488dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="20dp"
            android:background="@color/fondo"
            android:paddingTop="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.276"
            tools:ignore="MissingConstraints">

            <TableRow>


                <TextView
                    android:layout_width="131dp"
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/producto"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="115dp"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="@string/cantidad"
                    android:textAlignment="center"
                    tools:ignore="RtlCompat,RtlHardcoded" />

                <TextView
                    android:layout_width="149dp"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="Total"
                    android:textAlignment="center"
                    tools:ignore="RtlCompat,RtlHardcoded" />
            </TableRow>

            <TableRow

                >

                <TextView
                    android:id="@+id/Row1"
                    android:layout_width="131dp"
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text=""
                    android:textAlignment="center"
                    tools:ignore="InvalidId" />

                <TextView
                    android:id="@+id/Row2"
                    android:layout_width="115dp"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text=""
                    android:textAlignment="center"
                    tools:ignore="DuplicateIds,RtlCompat,RtlHardcoded" />

                <TextView
                    android:id="@+id/Row3"
                    android:layout_width="149dp"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text=""
                    android:textAlignment="center"
                    tools:ignore="RtlCompat,RtlHardcoded" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="164dp"
            android:layout_height="40dp"
            android:layout_marginStart="177dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="176dp"
            android:backgroundTint="@color/titulos"
            android:text="@string/registro"
            android:textAlignment="center"
            android:textColor="@color/titulos"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtRegistro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>